types of queries and params, fixing bugs
